samples/_failures_safe/1761471171_fd25ff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0dffa06d.c: In function ‘main’:
./samples/SAFE/__tmp_0dffa06d.c:136:9: error: expected expression at end of input
  136 |         int parsed = sscanf(line,
      |         ^~~
./samples/SAFE/__tmp_0dffa06d.c:136:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0dffa06d.c:136:9: error: expected declaration or statement at end of input
